Quorum/Library/Tests/TypeChecker/Pass/ExpAssignBoolObjUndefinedField.quorum
class Main
    Boolean bool
    action Main
        bool = cast(Boolean, undefined)
        if bool = undefined
            output "passed"
        end
    end
end