Quorum/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjInteger.quorum
class main
    action Main
        Boolean bool
        bool = cast(Boolean, 5)
    end
end